--- a/project2/greece.css
+++ b/project2/greece.css
@@ -1,10 +1,22 @@
 /**********
 Body */
-.body{
+body {
+  font-family: 'Inria Serif', serif ;
+
+}
+#greece{
     background-color: #EDF7FC;
     color:#007D7C;
 }
+#serbia {
+    background-color: ;
+    color: ;
 
+}
+h2, 
+.navbar {
+  font-family: 'Italiana', serif;
+}
 /*********
 Navigation bar */
 
@@ -12,26 +24,33 @@ Navigation bar */
     width: 1440px;
     height: 42px;
     flex-shrink: 0;
-    background: #007D7C;
+    
     overflow: hidden;
 }
 
+#greece .navbar {
+  background: #007D7C;
+}
+.navbar a {
+  float: left;
+  display: block;
   
-  .navbar a {
-    float: left;
-    display: block;
-    color: #EDF7FC;
-    text-align: center;
-    padding: 14px 36px;
-    text-decoration: none;
-  }
+  text-align: center;
+  padding: 14px 36px;
+  text-decoration: none;
+}
+#greece .navbar a {
+  color: #EDF7FC;
+
+}
   
-  .navbar a:hover {
+ 
+#greece .navbar a:hover {
     background: #EDF7FC;
     color:#007D7C ;
   }
 
-  .button-clicked {
+#greece .button-clicked {
     background-color:  #EDF7FC; 
   }
 
@@ -39,25 +58,41 @@ Navigation bar */
 /**********
 Section One */
 
-#flexchunk{
+.flex{
   display: flex;
   flex-direction: row;
+  align-items: center;
   
 }
 
 /* Image div */
-.image{
-  /* margin-top: 179px;
-  margin-bottom: 65px;
-  margin-left: 117px;
-  margin-right: 763px; */
-  margin: 179px 65px 763px;
-  
+section {
+  margin: 0 auto;
+  width: 800px;  
+}
+#first-section {
+  margin-top: 179px;
+}
+#greece #first-section {
+  margin-bottom: 318px;
+}
+#serbia #first-section {
+  margin-bottom: 204px;
+}
+#greeceOne {
+  width: 37.5vw;
+  /* width: 37.5%; */
 }
 
 /* Text div */
+.text {
+  margin-left: 133px;
 
-
+}
+.highlight {
+  font-style: italic;
+  font-weight: bold;
+}
 
 
 /*********
