--- a/project2/countries.css
+++ b/project2/countries.css
@@ -25,7 +25,7 @@ body {
 .navbar{
   flex-shrink: 0;
   overflow: hidden;
-  font-size: 30px;
+  font-size: 25px;
   width: 1440px;
   height: 42px;
 }
@@ -33,7 +33,7 @@ body {
   float: left;
   display: block;
   text-align: center;
-  padding: 4px 36px;
+  padding: 7px 36px;
   text-decoration: none;
   }
 
@@ -113,13 +113,15 @@ Sections */
 #Two {
   width: 544px;
   height: 738px;
-  margin-right: 117px ;
+  margin-right: 102px ;
+  
 }
 #Three {
   width: 536px;
   height: 748px;
-  margin-left: 117px;
-  margin-right: 133px;
+  margin-left: 121px;
+  margin-right: 133px;  
+  
 }
 
 
@@ -131,7 +133,7 @@ Section One */
 }
 #first-section .text {
   text-align: justify;
-  margin-right: 123px;
+  margin-right: 132px;
 }
 
 /*********
@@ -141,7 +143,7 @@ Section Two */
   margin-top: 143px;
 }
 #second-section .text {
-  margin-left: 147px;
+  margin-left: 249px;
   text-align: justify;
 }
 #second-section .image {
@@ -156,7 +158,7 @@ Section Three */
 }
 #third-section .text {
   text-align: justify;
-  margin-right: 123px;
+  margin-right: 132px;
 }
 
 
@@ -165,10 +167,13 @@ footer {
   width: 1440px;
   height: 110px;
   margin-top: 143px;
-  font-size: 22px;
+}
+.sources {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding: 22px;
+  margin-left: 117px;
 }
 #greece-footer {
   background-color: #007D7C;
@@ -181,4 +186,7 @@ footer {
 #austria-footer {
   background-color: #51382A;
   color: #F8F7F7;
+}
+#austria-src {
+  color:rgba(248, 247, 247, 0.54);
 }
