--- a/project2/style.css
+++ b/project2/style.css
@@ -1,4 +1,4 @@
-/* This is the main CSS style sheet for ivamiletic.github.io/project-2 site */
+/* This is the main CSS style sheet for the index.html page */
 
 /**********
  Body */
