--- a/project2/countries.css
+++ b/project2/countries.css
@@ -91,23 +91,37 @@ Sections general */
 .column {
   display: flex;
   flex-direction: column;
-
 }
-.h2 {
-  font-size: 40px;
-  letter-spacing: 2.4px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal; 
-  margin-left: 794px;
-  margin-top: 179px;
-  padding: 27px;
+
+/* Overlay text */
+h2 {
+  padding: 15px;
+  font-family: 'Italiana', serif;
+}
+#churchSerbia  {
+  background-color: #F9FFEC;
+}
+#cavesGreece {
   background-color: #EDF7FC;
-  
+}
+#cathedralAustria {
+  background-color: #F8F7F7;
+}
+.overlay {
+  position: absolute;
+  top: -20;
+  left: 500;
+}
+.overlay-section {
+  position: relative;
 }
 .highlight {
   font-style: italic;
   font-weight: bold;
+}
+#third-section, #first-section .text {
+  text-align: justify;
+  margin-right: 117px;
 }
 
 /**********
@@ -116,19 +130,18 @@ Sections general */
   width: 544px;
   height: 738px;
   margin-left: 117px;
-  margin-right: 133px ;  
+  margin-right: 118px ;  
 }
 #Two {
   width: 544px;
   height: 738px;
-  margin-right: 102px ;
-  
+  margin-right: 117px ;  
 }
 #Three {
-  width: 536px;
+  width: 540px;
   height: 748px;
   margin-left: 121px;
-  margin-right: 133px;    
+  margin-right: 118px;    
 }
 
 
@@ -136,29 +149,16 @@ Sections general */
 Section One */
 #first-section {
   margin-top: 179px;
-  margin-bottom: 65px;
+  margin-bottom: 208px;
 }
-#first-section .text {
-  text-align: justify;
-  margin-right: 132px;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 500;
-}
-.overlay-section {
-  position: relative;
-}
-/* added this */
-/*********
-Section Two */
+
+/**********
+Section Two  */
 #second-section {
-  margin-bottom: 65px;
-  margin-top: 143px;
+  margin-bottom: 317px;
 }
 #second-section .text {
-  margin-left: 249px;
+  margin-left: 117px;
   text-align: justify;
 }
 #second-section .image {
@@ -168,12 +168,7 @@ Section Two */
 /*******
 Section Three */
 #third-section {
-  margin-bottom: 65px;
-  margin-top: 143px;
-}
-#third-section .text {
-  text-align: justify;
-  margin-right: 132px;
+  margin-bottom: 158px;
 }
 
 
@@ -189,7 +184,7 @@ footer {
   font-weight: 400;
   line-height: normal;
   padding: 31px;
-  margin-left: 90px;
+  padding-left: 121px;
   font-size: 13px;
 }
 /* Greece footer */
@@ -243,5 +238,87 @@ footer {
 }
 #austria::-webkit-scrollbar-track {
   background: #F8F7F7;
+}
+
+
+/*********
+ Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding-left: 80px;
+  padding-right: 80px;
+  margin-top: -22px;
+  font-weight: bold;
+  font-size: 25px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a grey background color */
+.prev:hover, .next:hover {
+  color: #DCDDD7;
+}
+#videoslide {
+  margin-left: 117px;
+  margin-right: 118px;
+}
+
+
+/******
+ Top button */
+#myBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+  font-family: 'Italiana', serif;
+}
+
+#greece #myBtn {
+  background-color: #007D7C;
+  color:#EDF7FC
+}
+#greece #myBtn:hover {
+  color: #007D7C;
+  background-color: #C2E4F0;
+}
+#serbia #myBtn {
+  background-color: rgba(70, 97, 70, 0.87);
+  color:#F8F7F7;
+}
+#serbia #myBtn:hover {
+  color: rgba(70, 97, 70, 0.87);
+  background-color: #DCEDB4;
+}
+#austria #myBtn {
+  background-color: #51382A;
+  color:#F9FFEC;
+}
+#austria #myBtn:hover {
+  color: #51382A;
+  background-color: #DCDDD7;
 }
 
